--- a/EmployeeInfoSystem/EmployeeInfoSystem.csproj
+++ b/EmployeeInfoSystem/EmployeeInfoSystem.csproj
@@ -33,8 +33,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,11 +55,42 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dataTools\deleteTools.cs" />
+    <Compile Include="dataTools\insertTools.cs" />
+    <Compile Include="dataTools\selectTools.cs" />
+    <Compile Include="dataTools\updateTools.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Model\companyPosition.cs">
+      <DependentUpon>employeeInfoSystem.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\department.cs">
+      <DependentUpon>employeeInfoSystem.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\employeeInfo.cs">
+      <DependentUpon>employeeInfoSystem.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\employeeInfoSystem.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>employeeInfoSystem.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\employeeInfoSystem.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>employeeInfoSystem.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\employeeInfoSystem.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>employeeInfoSystem.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Model\employeePerformance.cs">
+      <DependentUpon>employeeInfoSystem.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -63,6 +103,14 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EntityDeploy Include="Model\employeeInfoSystem.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>employeeInfoSystem.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Model\employeeInfoSystem.edmx.diagram">
+      <DependentUpon>employeeInfoSystem.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -75,6 +123,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Model\employeeInfoSystem.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>employeeInfoSystem.edmx</DependentUpon>
+      <LastGenOutput>employeeInfoSystem.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Model\employeeInfoSystem.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>employeeInfoSystem.edmx</DependentUpon>
+      <LastGenOutput>employeeInfoSystem.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
