--- a/EmployeeInfoSystem/EmployeeInfoSystem.csproj
+++ b/EmployeeInfoSystem/EmployeeInfoSystem.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="LambdaHelper.cs" />
     <Compile Include="Model\companyPosition.cs">
       <DependentUpon>employeeInfoSystem.tt</DependentUpon>
     </Compile>
@@ -94,6 +95,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
