完成最后一个

--- a/EmployeeInfoSystem/App.config
+++ b/EmployeeInfoSystem/App.config
@@ -9,7 +9,7 @@
   </startup>
   <connectionStrings>
    
-  <add name="employeeInfoSystemEntities" connectionString="metadata=res://*/Model.employeeInfoSystem.csdl|res://*/Model.employeeInfoSystem.ssdl|res://*/Model.employeeInfoSystem.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CY\EATMEDICINE;initial catalog=employeeInfoSystem;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="employeeInfoSystemEntities" connectionString="metadata=res://*/Model.employeeInfoSystem.csdl|res://*/Model.employeeInfoSystem.ssdl|res://*/Model.employeeInfoSystem.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=employeeInfoSystem;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
